--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block css %}
-    <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
     <link href="{{ url_for('static',filename='css/numberstepper.css') }}" rel="stylesheet">
     <style type="text/css">
         .weui-cell__bd {
@@ -151,7 +151,7 @@
 
 {% endblock %}
 {% block script %}
-    <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.staticfile.org/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script type="text/javascript"
             src="http://api.map.baidu.com/api?v=3.0&ak=67CKhYZ0N7g1M0BLOHnOqsu6idBxN2vT"></script>
