--- a/CarWechat/app/templates/car/repay.html
+++ b/CarWechat/app/templates/car/repay.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block css %}
-    <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
     <style type="text/css">
         .container {
             padding: 20px;
@@ -85,7 +85,7 @@
 
 {% endblock %}
 {% block script %}
-    <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.staticfile.org/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script>
     function cancel() {
