--- a/CarWechat/app/templates/car/selectCar.html
+++ b/CarWechat/app/templates/car/selectCar.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block css %}
-    <link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
     <style>
 
 
