--- a/CarWechat/app/templates/car/signpay.html
+++ b/CarWechat/app/templates/car/signpay.html
@@ -30,7 +30,8 @@
 
 {% endblock %}
 {% block script %}
-    <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+    <script src="https://cdn.staticfile.org/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 
     <script>
