--- a/CarAdmin/app/templates/admin/base.html
+++ b/CarAdmin/app/templates/admin/base.html
@@ -13,8 +13,8 @@
         <meta name="author" content="">
     {% endblock %}
     {% block head_css %}
-        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
+        <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="{{ admin_static.url(filename='admin/css/bootstrap3/admin.css', v='1.1.1') }}" rel="stylesheet">
         <style>
             @media print {
@@ -79,10 +79,10 @@
 {% endblock %}
 
 {% block tail_js %}
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment-with-locales.min.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/select2/3.5.2/select2.min.js" type="text/javascript"></script>
+    <script src="https://cdn.staticfile.org/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://cdn.staticfile.org/moment.js/2.22.1/moment-with-locales.min.js" type="text/javascript"></script>
+    <script src="https://cdn.staticfile.org/select2/3.5.2/select2.min.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block tail %}
