--- a/CarAdmin/app/templates/myAdmin/KPI.html
+++ b/CarAdmin/app/templates/myAdmin/KPI.html
@@ -1,10 +1,10 @@
 {% extends 'admin/master.html' %}
 {% block head_meta %}
     {{ super() }}
-    <script src="https://cdn.bootcss.com/echarts/4.1.0.rc2/echarts.min.js"></script>
+    <script src="https://cdn.staticfile.org/echarts/4.1.0.rc2/echarts.min.js"></script>
 
     <script src="{{ url_for('static',filename='js/macarons.js') }}"></script>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
 {% endblock %}
 {% block head_css %}
     {{ super() }}
