--- a/CarWechat/app/templates/base.html
+++ b/CarWechat/app/templates/base.html
@@ -5,9 +5,9 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--Import Google Icon Font-->
-    <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
     <!--Import materialize.css-->
-    <link href="https://cdn.bootcss.com/weui/1.1.2/style/weui.min.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/weui/1.1.2/style/weui.min.css" rel="stylesheet">
     <link href="{{ url_for('static',filename='css/weui-extension.min.css') }}" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
@@ -80,9 +80,9 @@
 
 {% endblock %}
 <!--Import jQuery before materialize.js-->
-<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+<script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
 
-{#<script src="https://cdn.bootcss.com/materialize/0.100.2/js/materialize.min.js"></script>#}
+{#<script src="https://cdn.staticfile.org/materialize/0.100.2/js/materialize.min.js"></script>#}
 <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 <script>
     var bodyHeight = document.body.clientHeight;
