--- a/CarAdmin/app/templates/base.html
+++ b/CarAdmin/app/templates/base.html
@@ -5,7 +5,7 @@
     <!--Import Google Icon Font-->
     <link href="https://cdn.staticfile.org/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
     <!--Import materialize.css-->
-    <link href="https://cdn.staticfile.org/materialize/1.0.0-rc.2/css/materialize.min.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/materialize/0.97.8/css/materialize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
     {% block css %}{% endblock %}
     <!--Let browser know website is optimized for mobile-->
@@ -43,7 +43,7 @@
 <!--Import jQuery before materialize.js-->
 <script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
 
-<script src="https://cdn.staticfile.org/materialize/0.100.2/js/materialize.min.js"></script>
+<script src="https://cdn.staticfile.org/materialize/0.97.8/js/materialize.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 {% block script %}{% endblock %}
 </body>
